Implemented Auth0 authentication

--- a/SuggestionsAppUI/Pages/Create.razor
+++ b/SuggestionsAppUI/Pages/Create.razor
@@ -1,4 +1,6 @@
 ﻿@page "/Create"
+@attribute [Authorize]
+
 @using SuggestionsAppUI.Components
 @using SuggestionsAppUI.Models
 @inject ICategoryData categoryData
