--- a/SuggestionsAppUI/Shared/MainLayout.razor
+++ b/SuggestionsAppUI/Shared/MainLayout.razor
@@ -4,6 +4,7 @@
 
 <div class="page">
     <main>
+		<AuthAccessControl />
         <article class="content px-4">
             @Body
         </article>
