--- a/SuggestionsAppUI/Pages/AdminApproval.razor
+++ b/SuggestionsAppUI/Pages/AdminApproval.razor
@@ -1,4 +1,5 @@
 ﻿@page "/AdminApproval"
+@attribute [Authorize]
 @inject ISuggestionData suggestionData
 @inject IUserData userData
 @inject NavigationManager navManager
